# wireguard-config-gen

./: .gitignore  AGENTS.md  CHANGELOG.md  CODEBASE.md  README.md  configparser.py  genkeys.py  interfaces.demo.yaml  models.py  parseconfig.py  parsewgconfig.py  parseyamlconfig.py  pyproject.toml  requirements.in  requirements.txt  run.py
wgconf/: genkeys.py  parsewgconfig.py  parseyamlconfig.py  run.py  utils.py
