[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "Wireguard-config-gen"
version = "0.5.2"
description = "Wireguard config generator"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["cryptography~=44.0", "pydantic~=2.10", "pyyaml~=6.0"]

[project.optional-dependencies]
dev = ["bumpver"]
tests = []

[tool.bumpver]
current_version = "0.5.2"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "Bump version {old_version} → {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = ['version = "{version}"']

# [tool.setuptools]
# packages = ["wireguardconfgen"]
